force-app/main/default/objects/PedidoDeCompra__c/fields/Aportacion__c.field-meta.xml
<CustomField>
    <fullName>Aportacion__c</fullName>
    <formula>Proforma__r.Oportunidad__r.PlanificacionComercial__r.PorcentajeAportaciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Aportación (según planificación)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>