force-app/main/default/objects/PedidoDeCompra__c/fields/Aportacion_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Aportacion_Pedido__c</fullName>
    <label>% Aportación Pedido</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>