force-app/main/default/objects/PedidoDeCompra__c/fields/Aportacion_usd__c.field-meta.xml
<CustomField>
    <fullName>Aportacion_usd__c</fullName>
    <formula>Aportacion_Pedido__c *  Precio_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aportación (% plan * importe bruto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>