force-app/main/default/objects/PedidoDeCompra__c/fields/Aprobada_Transferencia_Balance__c.field-meta.xml
<CustomField>
    <fullName>Aprobada_Transferencia_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aprobada la transferencia para el balance</description>
    <label>Aprobada transferencia balance</label>
    <type>Checkbox</type>
</CustomField>