force-app/main/default/objects/PedidoDeCompra__c/fields/Aprobada_Transferencia_Deposito__c.field-meta.xml
<CustomField>
    <fullName>Aprobada_Transferencia_Deposito__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aprobacion de solicutid de transferencia de deposito</description>
    <label>Aprobada transferencia depsóito</label>
    <type>Checkbox</type>
</CustomField>