force-app/main/default/objects/PedidoDeCompra__c/fields/Aprobado_Envio__c.field-meta.xml
<CustomField>
    <fullName>Aprobado_Envio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobado para envio</label>
    <type>Checkbox</type>
</CustomField>