force-app/main/default/objects/PedidoDeCompra__c/fields/AuditoriaAprobada__c.field-meta.xml
<CustomField>
    <fullName>AuditoriaAprobada__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If an audit is required, it is marked when Purchasing confirms its approval.</inlineHelpText>
    <label>Auditoría aprobada</label>
    <type>Checkbox</type>
</CustomField>