force-app/main/default/objects/PedidoDeCompra__c/fields/Beneficio__c.field-meta.xml
<CustomField>
    <fullName>Beneficio__c</fullName>
    <formula>Importe_Venta_Neto_Nuevo__c *  MargenOperacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficio Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>