force-app/main/default/objects/PedidoDeCompra__c/fields/BL__c.field-meta.xml
<CustomField>
    <fullName>BL__c</fullName>
    <label>BL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipos_BL</valueSetName>
    </valueSet>
</CustomField>