force-app/main/default/objects/PedidoDeCompra__c/fields/Booking_Agente__c.field-meta.xml
<CustomField>
    <fullName>Booking_Agente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agente Cliente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agente</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos (Agente)</relationshipLabel>
    <relationshipName>Pedidos1</relationshipName>
    <type>Lookup</type>
</CustomField>