force-app/main/default/objects/PedidoDeCompra__c/fields/c_Produccion_Finalizada__c.field-meta.xml
<CustomField>
    <fullName>c_Produccion_Finalizada__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>It is marked when purchase confirming the completion of production</inlineHelpText>
    <label>Producción finalizada</label>
    <type>Checkbox</type>
</CustomField>