force-app/main/default/objects/PedidoDeCompra__c/fields/c_Requiere_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>c_Requiere_Auditoria__c</fullName>
    <defaultValue>&apos;Si&apos;</defaultValue>
    <label>Requiere Auditoría</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>