force-app/main/default/objects/PedidoDeCompra__c/fields/CambioDocumentos__c.field-meta.xml
<CustomField>
    <fullName>CambioDocumentos__c</fullName>
    <description>Nro Contenedores *  Cambio Documentos X Contenedor</description>
    <formula>NroContenedores__c *  CambioDocumentsXHQ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of containers * document change per container</inlineHelpText>
    <label>Cambio Documentos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>