force-app/main/default/objects/PedidoDeCompra__c/fields/CambioDocumentsXHQ__c.field-meta.xml
<CustomField>
    <fullName>CambioDocumentsXHQ__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Cambio documentos x Contenedor</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>