force-app/main/default/objects/PedidoDeCompra__c/fields/Campana__c.field-meta.xml
<CustomField>
    <fullName>Campana__c</fullName>
    <formula>TEXT(Proforma__r.Oportunidad__r.Campana__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaña</label>
    <type>Text</type>
</CustomField>