force-app/main/default/objects/PedidoDeCompra__c/fields/CARRIER__c.field-meta.xml
<CustomField>
    <fullName>CARRIER__c</fullName>
    <label>CARRIER</label>
    <length>120</length>
    <type>Text</type>
</CustomField>