force-app/main/default/objects/PedidoDeCompra__c/fields/CBMTotal__c.field-meta.xml
<CustomField>
    <fullName>CBMTotal__c</fullName>
    <label>CBM Total</label>
    <summarizedField>PedidoLineItem__c.CBMTotal__c</summarizedField>
    <summaryForeignKey>PedidoLineItem__c.PedidoDeCompra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>