force-app/main/default/objects/PedidoDeCompra__c/fields/Certificado_de_Origen__c.field-meta.xml
<CustomField>
    <fullName>Certificado_de_Origen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificado de Origen</label>
    <type>Checkbox</type>
</CustomField>