force-app/main/default/objects/PedidoDeCompra__c/fields/CertificadoOrigen__c.field-meta.xml
<CustomField>
    <fullName>CertificadoOrigen__c</fullName>
    <label>Certificado Origen</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>