force-app/main/default/objects/PedidoDeCompra__c/fields/Comentarios_fabrica__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_fabrica__c</fullName>
    <label>Comentarios a la fábrica</label>
    <type>TextArea</type>
</CustomField>