force-app/main/default/objects/PedidoDeCompra__c/fields/ComisionAdministrativa__c.field-meta.xml
<CustomField>
    <fullName>ComisionAdministrativa__c</fullName>
    <label>Comisión Administrativa</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>