force-app/main/default/objects/PedidoDeCompra__c/fields/Confirmacion_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Confirmacion_Proveedor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>c_Confirmacion Proveedor</label>
    <type>Checkbox</type>
</CustomField>