force-app/main/default/objects/PedidoDeCompra__c/fields/ControlCobroPedido__c.field-meta.xml
<CustomField>
    <fullName>ControlCobroPedido__c</fullName>
    <formula>FechaDeCobro__c - ( ETD__c + VALUE ( TEXT ( Proforma__r.Cuenta__r.Parent.PlazoPago__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual collection date - (ETD + main account collection period). Expressed in days</inlineHelpText>
    <label>Control cobro pedido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>