force-app/main/default/objects/PedidoDeCompra__c/fields/ControlPagoPedido__c.field-meta.xml
<CustomField>
    <fullName>ControlPagoPedido__c</fullName>
    <formula>( FechaDePago__c +  VALUE ( TEXT ( Proveedor__r.PlazoPago__c ) ) ) -  ETD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Actual payment date + Payment term) - ETD. Expressed in days.</inlineHelpText>
    <label>Control pago pedido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>