force-app/main/default/objects/PedidoDeCompra__c/fields/Convenio__c.field-meta.xml
<CustomField>
    <fullName>Convenio__c</fullName>
    <formula>Proforma__r.Oportunidad__r.PlanificacionComercial__r.PorcentajeConvenio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Convenio (según planificiación)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>