force-app/main/default/objects/PedidoDeCompra__c/fields/Convenio_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Convenio_Pedido__c</fullName>
    <label>% Convenio Pedido</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>