force-app/main/default/objects/PedidoDeCompra__c/fields/Convenio_usd__c.field-meta.xml
<CustomField>
    <fullName>Convenio_usd__c</fullName>
    <description>Calculado según el % de convenio en la planificación asociada (si la planificación cambia dentro del ejercicio este calculo NO sirve)</description>
    <formula>Convenio_Pedido__c *  Precio_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Convenio (% plan * importe bruto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>