force-app/main/default/objects/PedidoDeCompra__c/fields/Correo_Documentos_Embarcado__c.field-meta.xml
<CustomField>
    <fullName>Correo_Documentos_Embarcado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Correo Documentos Embarcado</label>
    <type>Checkbox</type>
</CustomField>