force-app/main/default/objects/PedidoDeCompra__c/fields/correo_pago_balance__c.field-meta.xml
<CustomField>
    <fullName>correo_pago_balance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>En pedidos confirmados , indicador para determinar si el correo de pago de balance ya fue enviado</description>
    <label>correo pago balance</label>
    <type>Checkbox</type>
</CustomField>