force-app/main/default/objects/PedidoDeCompra__c/fields/Correo_Pago_Deposito__c.field-meta.xml
<CustomField>
    <fullName>Correo_Pago_Deposito__c</fullName>
    <defaultValue>false</defaultValue>
    <description>En pedidos confirmados, indicador para determinar si el correo de solicitud de pago ya fue enviado</description>
    <label>Correo pago depósito</label>
    <type>Checkbox</type>
</CustomField>