force-app/main/default/objects/PedidoDeCompra__c/fields/CostoFinancieroDepositoFabrica__c.field-meta.xml
<CustomField>
    <fullName>CostoFinancieroDepositoFabrica__c</fullName>
    <description>Importe Adelantado *  (Plazo Fabricación + Plazo Pago) /360 *  Tipo De Interés Deposito Fabrica</description>
    <formula>ImporteAdelantado__c * (PlazoFabricacion__c + PlazoPagoFab__c) /360 *  TipoDeInteresDepositoFabrica__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Advance payment * (manufacturing time + payment time) / 360 * factory deposit interest rate</inlineHelpText>
    <label>Costo Financiero (Fabrica)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>