force-app/main/default/objects/PedidoDeCompra__c/fields/CostoFinancieroFinanciacionClientes__c.field-meta.xml
<CustomField>
    <fullName>CostoFinancieroFinanciacionClientes__c</fullName>
    <description>Costo Origen *  (Plazo Cobro Cliente - Plazo Pago) /360 *  Tipo De Interes Financiacion Clientes</description>
    <formula>CostoOrigen__c *  (PlazoPago__c - PlazoPagoFab__c)/360 *  TipoDeInteresFinanciacionClient__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Origin Cost * (Customer Collection Term - Payment Term) / 360 * Customer Financing Interest Rate</inlineHelpText>
    <label>Costo Financiero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>