force-app/main/default/objects/PedidoDeCompra__c/fields/CostoOrigen__c.field-meta.xml
<CustomField>
    <fullName>CostoOrigen__c</fullName>
    <label>Costo Fábrica (total)</label>
    <summarizedField>PedidoLineItem__c.CostoOrigenTot__c</summarizedField>
    <summaryForeignKey>PedidoLineItem__c.PedidoDeCompra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>