force-app/main/default/objects/PedidoDeCompra__c/fields/CostosImportacion__c.field-meta.xml
<CustomField>
    <fullName>CostosImportacion__c</fullName>
    <description>Gastos Bancarios + Gastos En Puerto +  Gastos Inspeccion + Otros Costos</description>
    <formula>GastosBancarios__c + GastosEnPuerto__c +  GastosInspeccion__c + OtrosCostos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bank charges + port charges + inspection charges + other costs</inlineHelpText>
    <label>Costo Extra (total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>