force-app/main/default/objects/PedidoDeCompra__c/fields/CostoTotal__c.field-meta.xml
<CustomField>
    <fullName>CostoTotal__c</fullName>
    <description>Costo Fábrica +  Costo Extra</description>
    <formula>CostoOrigen__c +  CostosImportacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Factory Cost + Extra Cost</inlineHelpText>
    <label>Costo Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>