force-app/main/default/objects/PedidoDeCompra__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <formula>Proforma__r.Cuenta__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta</label>
    <type>Text</type>
</CustomField>