force-app/main/default/objects/PedidoDeCompra__c/fields/CuentaId__c.field-meta.xml
<CustomField>
    <fullName>CuentaId__c</fullName>
    <formula>CASESAFEID ( Proforma__r.Cuenta__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta Id</label>
    <type>Text</type>
</CustomField>