force-app/main/default/objects/PedidoDeCompra__c/fields/CuentaRelacion__c.field-meta.xml
<CustomField>
    <fullName>CuentaRelacion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos (Cuenta)</relationshipLabel>
    <relationshipName>Pedidos2</relationshipName>
    <type>Lookup</type>
</CustomField>