force-app/main/default/objects/PedidoDeCompra__c/fields/D_as_de_financiaci_n_pedido__c.field-meta.xml
<CustomField>
    <fullName>D_as_de_financiaci_n_pedido__c</fullName>
    <formula>Plazo_cobro_real__c -  Plazo_pago_real__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Financing days between order collection and payment</inlineHelpText>
    <label>Días de financiación pedido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>