force-app/main/default/objects/PedidoDeCompra__c/fields/Dise_ador__c.field-meta.xml
<CustomField>
    <fullName>Dise_ador__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The designer has uploaded the final versions of the files to Dropbox for factory submission by the Purchasing team</inlineHelpText>
    <label>Versión final aprobada</label>
    <type>Checkbox</type>
</CustomField>