force-app/main/default/objects/PedidoDeCompra__c/fields/Dise_ador_Gr_fico__c.field-meta.xml
<CustomField>
    <fullName>Dise_ador_Gr_fico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Defines who is the responsible graphic designer</inlineHelpText>
    <label>Diseñador Gráfico</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>