force-app/main/default/objects/PedidoDeCompra__c/fields/Dise_ando_packagings__c.field-meta.xml
<CustomField>
    <fullName>Dise_ando_packagings__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The designer has received the technical information and has started the design</inlineHelpText>
    <label>Diseñando packaging</label>
    <type>Checkbox</type>
</CustomField>