force-app/main/default/objects/PedidoDeCompra__c/fields/diseno_a_fabrica__c.field-meta.xml
<CustomField>
    <fullName>diseno_a_fabrica__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marca cuando Compras envía a la fábrica el diseño de packaging aprobado por el cliente.</description>
    <inlineHelpText>The Order owner has already sent the packagings to the Factory for production</inlineHelpText>
    <label>Diseño a fábrica</label>
    <type>Checkbox</type>
</CustomField>