force-app/main/default/objects/PedidoDeCompra__c/fields/diseno_aprobado__c.field-meta.xml
<CustomField>
    <fullName>diseno_aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>de uso del sistema</description>
    <label>c_Diseño aprobado</label>
    <type>Checkbox</type>
</CustomField>