force-app/main/default/objects/PedidoDeCompra__c/fields/Documentos_Embarcado_Completos__c.field-meta.xml
<CustomField>
    <fullName>Documentos_Embarcado_Completos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentos Embarcado Completos</label>
    <type>Checkbox</type>
</CustomField>