force-app/main/default/objects/PedidoDeCompra__c/fields/Email_Fabrica__c.field-meta.xml
<CustomField>
    <fullName>Email_Fabrica__c</fullName>
    <description>Correo comercial de proveedor. El dato se registra en el desencadenador de eventos de proforma</description>
    <label>Email Fabrica</label>
    <type>Email</type>
</CustomField>