force-app/main/default/objects/PedidoDeCompra__c/fields/Email_Facturacion_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Email_Facturacion_Cliente__c</fullName>
    <label>Email Facturación Cliente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>