force-app/main/default/objects/PedidoDeCompra__c/fields/Enviado_libra__c.field-meta.xml
<CustomField>
    <fullName>Enviado_libra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Factura enviada a libra</label>
    <type>Checkbox</type>
</CustomField>