force-app/main/default/objects/PedidoDeCompra__c/fields/Enviar_solicitud_booking__c.field-meta.xml
<CustomField>
    <fullName>Enviar_solicitud_booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar solicitud de booking automática</label>
    <type>Checkbox</type>
</CustomField>