force-app/main/default/objects/PedidoDeCompra__c/fields/Estado2__c.field-meta.xml
<CustomField>
    <fullName>Estado2__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PEDIDO CONFIRMADO</fullName>
            </value>
            <value>
                <fullName>PACKAGING</fullName>
            </value>
            <value>
                <fullName>PRODUCCIÓN</fullName>
            </value>
            <value>
                <fullName>PRODUCCIÓN FINALIZADA</fullName>
            </value>
            <value>
                <fullName>EMBARCADO</fullName>
            </value>
            <value>
                <fullName>SIMULACION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>