force-app/main/default/objects/PedidoDeCompra__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;Simulacion&apos;,
&apos;SIMULACION&apos;,
IF(AND(OR(fotos_cargue_cont__c, Grupaje__c), NOT(ISBLANK( N_de_Seal__c))), 
&apos;EMBARCADO&apos;,
IF(c_Produccion_Finalizada__c,
&apos;PRODUCCIÓN FINALIZADA&apos;, 
IF(diseno_a_fabrica__c, 
&apos;PRODUCCIÓN&apos;, 
IF(OR(justificante_de_pago__c,
   AND( Confirmacion_Proveedor__c,  ISBLANK(TEXT(Proveedor__r.PorcentajeDeposito__c)))), 
&apos;PACKAGING&apos;, 
&apos;PEDIDO CONFIRMADO&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado</label>
    <type>Text</type>
</CustomField>