force-app/main/default/objects/PedidoDeCompra__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <description>Fecha estimada de llegada (Estimated Time of Arrival)</description>
    <inlineHelpText>Estimated time of arrival</inlineHelpText>
    <label>ETA</label>
    <type>Date</type>
</CustomField>