force-app/main/default/objects/PedidoDeCompra__c/fields/ETD__c.field-meta.xml
<CustomField>
    <fullName>ETD__c</fullName>
    <description>Fecha estimada de partida (Estimated Time of Departure)</description>
    <inlineHelpText>Estimated time of departure</inlineHelpText>
    <label>ETD</label>
    <type>Date</type>
</CustomField>