force-app/main/default/objects/PedidoDeCompra__c/fields/Factory_ETD__c.field-meta.xml
<CustomField>
    <fullName>Factory_ETD__c</fullName>
    <label>Factory CRD</label>
    <type>Date</type>
</CustomField>