force-app/main/default/objects/PedidoDeCompra__c/fields/Factura_Compra_Enviada__c.field-meta.xml
<CustomField>
    <fullName>Factura_Compra_Enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bandera que indica si la factura de compra para este pedido ha sido enviada a Libra</description>
    <label>Factura Compra Enviada</label>
    <type>Checkbox</type>
</CustomField>