force-app/main/default/objects/PedidoDeCompra__c/fields/Factura_Enviada_Libra__c.field-meta.xml
<CustomField>
    <fullName>Factura_Enviada_Libra__c</fullName>
    <formula>IF(Enviado_libra__c, &quot;Enviada&quot;, &quot;No enviada&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factura Enviada Libra</label>
    <type>Text</type>
</CustomField>