force-app/main/default/objects/PedidoDeCompra__c/fields/Factura_Venta_Enviada__c.field-meta.xml
<CustomField>
    <fullName>Factura_Venta_Enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la factura de venta para este pedido fue enviada con exito hacia Libra</description>
    <label>Factura Venta Enviada</label>
    <type>Checkbox</type>
</CustomField>