force-app/main/default/objects/PedidoDeCompra__c/fields/FacturaClienteCobrada__c.field-meta.xml
<CustomField>
    <fullName>FacturaClienteCobrada__c</fullName>
    <description>Registro cobro de facturas de clientes</description>
    <inlineHelpText>CFO records that a payment has been received from the customer, either fully or partially</inlineHelpText>
    <label>Factura cliente cobrada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>Parcialmente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>