force-app/main/default/objects/PedidoDeCompra__c/fields/FacturaDeCliente__c.field-meta.xml
<CustomField>
    <fullName>FacturaDeCliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factura de Cliente</label>
    <referenceTo>FacturaDeCliente__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>