force-app/main/default/objects/PedidoDeCompra__c/fields/FacturaProveedorPagada__c.field-meta.xml
<CustomField>
    <fullName>FacturaProveedorPagada__c</fullName>
    <description>CFO registra que la factura del proveedor ha sido pagada en su totalidad</description>
    <inlineHelpText>CFO records that the invoice has been fully paid</inlineHelpText>
    <label>Factura proveedor pagada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Sí</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>