force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_aprobacion_Packaging_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Fecha_aprobacion_Packaging_Cliente__c</fullName>
    <label>Fecha packaging aprobado por el cliente</label>
    <type>Date</type>
</CustomField>