force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_Aprobacion_Pago_Balance__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Aprobacion_Pago_Balance__c</fullName>
    <label>Fecha Aprobación Pago Balance</label>
    <type>Date</type>
</CustomField>