force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_Aprobacion_Pago_Deposito__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Aprobacion_Pago_Deposito__c</fullName>
    <label>Fecha Aprobación Pago Deposito</label>
    <type>Date</type>
</CustomField>