force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_Cancelacion_Factura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cancelacion_Factura__c</fullName>
    <description>Fecha de cancelación de la factura de venta.</description>
    <label>Fecha Cancelación Factura</label>
    <type>Date</type>
</CustomField>