force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_de_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Auditoria__c</fullName>
    <label>Fecha de Auditoría de Calidad</label>
    <type>Date</type>
</CustomField>