force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_de_Carga_de_Contenedor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Carga_de_Contenedor__c</fullName>
    <label>Fecha de Carga de Contenedor</label>
    <type>Date</type>
</CustomField>