force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_de_Compromiso_con_el_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Compromiso_con_el_Cliente__c</fullName>
    <description>Viene desde la Proforma. Es la fecha de compromiso de entrega aceptada por el Cliente.</description>
    <formula>Proforma__r.ETD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It comes from the proforma invoice. It&apos;s the delivery commitment date accepted by the customer</inlineHelpText>
    <label>Cargo Ready Date</label>
    <type>Date</type>
</CustomField>