force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_de_creaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_creaci_n__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de creación del pedido</label>
    <type>Date</type>
</CustomField>