force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_dise_ando_packaging__c.field-meta.xml
<CustomField>
    <fullName>Fecha_dise_ando_packaging__c</fullName>
    <label>Fecha diseñando packaging</label>
    <type>Date</type>
</CustomField>