force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_Factura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Factura__c</fullName>
    <description>Fecha en la que se emitió la factura al cliente.</description>
    <inlineHelpText>Date the invoice was issued to the customer</inlineHelpText>
    <label>Fecha factura cliente</label>
    <type>Date</type>
</CustomField>