force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_Factura_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Factura_Proveedor__c</fullName>
    <description>Fecha en la que se emitió la factura del proveedor.</description>
    <inlineHelpText>Date the invoice was issued by the supplier</inlineHelpText>
    <label>Fecha factura proveedor</label>
    <type>Date</type>
</CustomField>