force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_fin_de_Produccion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_fin_de_Produccion__c</fullName>
    <label>Fecha estimada fin de Producción</label>
    <type>Date</type>
</CustomField>