force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_limite_de_aprobacion_de_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Fecha_limite_de_aprobacion_de_Packaging__c</fullName>
    <description>Para esta fecha deben estar aprobados todos los packagings solicitados.</description>
    <inlineHelpText>All requested packaging must be approved by this date</inlineHelpText>
    <label>Fecha límite de aprobación de Packaging</label>
    <type>Date</type>
</CustomField>