force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_Maxima_Embarque__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Maxima_Embarque__c</fullName>
    <label>Final Shipping Window</label>
    <type>Date</type>
</CustomField>