force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_Minima_Embarque__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Minima_Embarque__c</fullName>
    <label>Initial Shipping Window</label>
    <type>Date</type>
</CustomField>