force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_packaging_enviado_al_cliente__c.field-meta.xml
<CustomField>
    <fullName>Fecha_packaging_enviado_al_cliente__c</fullName>
    <label>Fecha packaging enviado al cliente</label>
    <type>Date</type>
</CustomField>