force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_pago_dep_sito__c.field-meta.xml
<CustomField>
    <fullName>Fecha_pago_dep_sito__c</fullName>
    <description>Fecha pago deposito</description>
    <inlineHelpText>It will only be completed when a deposit is due for accounting registration</inlineHelpText>
    <label>Fecha pago depósito</label>
    <type>Date</type>
</CustomField>