force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_Plazo_Remanete__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Plazo_Remanete__c</fullName>
    <description>Fecha en la cual se debe generar la solicitud de transeferencia para pago del remamente, es decir, la fecha de embarque mas los dias del plazo.</description>
    <formula>ETD__c + Proveedor__r.Plazo_pago_int__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Plazo Remanente</label>
    <type>Date</type>
</CustomField>