force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_revisi_n_descripciones_comerciales__c.field-meta.xml
<CustomField>
    <fullName>Fecha_revisi_n_descripciones_comerciales__c</fullName>
    <label>Fecha revisión descripción comercial</label>
    <type>Date</type>
</CustomField>