force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_revisi_n_interna_comercial__c.field-meta.xml
<CustomField>
    <fullName>Fecha_revisi_n_interna_comercial__c</fullName>
    <label>Fecha revisión interna comercial</label>
    <type>Date</type>
</CustomField>