force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_solicitud_info_a_proveedor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_solicitud_info_a_proveedor__c</fullName>
    <label>Fecha solicitud info a proveedor</label>
    <type>Date</type>
</CustomField>