force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_tipo_de_dise_o_packaging__c.field-meta.xml
<CustomField>
    <fullName>Fecha_tipo_de_dise_o_packaging__c</fullName>
    <label>Fecha tipo de diseño packaging</label>
    <type>Date</type>
</CustomField>