force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_versi_n_final_aprobada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_versi_n_final_aprobada__c</fullName>
    <label>Fecha versión final aprobada</label>
    <type>Date</type>
</CustomField>