force-app/main/default/objects/PedidoDeCompra__c/fields/Fecha_versi_n_inicial_dise_ador__c.field-meta.xml
<CustomField>
    <fullName>Fecha_versi_n_inicial_dise_ador__c</fullName>
    <label>Fecha versión inicial diseñador</label>
    <type>Date</type>
</CustomField>