force-app/main/default/objects/PedidoDeCompra__c/fields/FechaDeCobro__c.field-meta.xml
<CustomField>
    <fullName>FechaDeCobro__c</fullName>
    <inlineHelpText>Date on which we received payment in our bank account. Completed by the CFO</inlineHelpText>
    <label>Fecha de cobro real</label>
    <type>Date</type>
</CustomField>