force-app/main/default/objects/PedidoDeCompra__c/fields/FechaDePago__c.field-meta.xml
<CustomField>
    <fullName>FechaDePago__c</fullName>
    <inlineHelpText>Date on which we instructed our bank to process the balance of the Order. Completed by the CFO</inlineHelpText>
    <label>Fecha de pago balance real</label>
    <type>Date</type>
</CustomField>